# fat-template

./: .coveragerc  .prettierrc.cjs  Makefile  README.md  bud.config.ts  jest.config.cjs  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json
.github/workflows/: badges.yml  test.yml  tests.yml
app/: .eslintrc.cjs  .gitignore  bud.config.ts  config.py  configs.py  dependencies.py  main.py  package.json  tailwind.config.ts  template_engine.py  tsconfig.json
app/resources/js/: index.js
app/resources/views/: base.html  error.html  index.html
app/routers/: api.py  pages.py
app/services/template_engine/: jinja.py  protocols.py
app/views/: base.html  error.html  index.html
tests/e2e/: test_error.py  test_homepage.py
tests/integration/: test_api.py  test_pages.py
tests/unit/services/: test_jinja_template_engine.py
