[tool.poetry]
name = "fat"
version = "0.1.0"
description = "Full-Stack boilerplate with FastAPI + AlpineJS + TailwindCSS"
authors = ["matapatos <andre_gil22@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
jinja2 = "^3.1.4"
pydantic-settings = "^2.3.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
