[tool.poetry]
name = "fat"
version = "0.1.0"
description = "Full-Stack boilerplate with FastAPI + AlpineJS + TailwindCSS"
authors = ["matapatos <andre_gil22@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
jinja2 = "^3.1.4"
pydantic-settings = "^2.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
pytest-playwright = "^0.5.0"
ruff = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
